--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
+    "oracledb": "^5.5.0",
     "tedious": "^15.1.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
@@ -23,6 +24,7 @@
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "nodemon": "^2.0.20",
