--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier-eslint": "^15.0.1"
   },
   "scripts": {
-    "local": "NODE_ENV=local nodemon --exec babel-node ./src",
+    "local": "cross-env NODE_ENV=local nodemon --exec babel-node ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
