git 이그노어 수정 및 오라클 실행 옵션 변경

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
-
 # Dependencies
-
-/node_modules
-
-/.pnp
-
-.pnp.js
-
-package-lock.json
 ./idea
+/node_modules
+package-lock.json
 
-# Testing/coverage
+# Library
+/lib
 
-# Production/build
-
-# Misc.DS_Store.env.local.env.development.local.env.test.local.env.production.local
-
-npm-debug.log*yarn-debug.log*yarn-error.log*
+# Logs
 /logs
-#backup*.bak
-
-
